Revision history for OpenTelemetry

{{$NEXT}}

0.019     2023-12-03 14:44:05+00:00 Europe/London

    * Document OpenTelemetry->logger as deprecated, as this will soon
      be removed to make room for the implementation of the Logs API.
    * Apply default values appropriately when receiving undefined values
    * The HTTP::Tiny and LWP::UserAgent integrations inject propagation
      data as appropriate
    * Bump dependency on Feature::Compat::Try to 0.05 for finally support
      in perl versions under 5.35 (GH #11)

0.018     2023-11-23 19:28:38+00:00 Europe/London

    * Document all shutdown and force_flush methods as async

0.017     2023-11-19 12:39:37+00:00 Europe/London

    * Undo conditional logic in Tracer's in_span introduced in 0.016.
      The span is read-only, so we cannot read its status. We now set
      the status unconditionally, but the user is free to mark the span
      as ended, in which case the automatically set status will be
      discarded.

0.016     2023-11-16 23:37:27+00:00 Europe/London

    * Fix issue tracker link in meta
    * Try to limit information set as span error descriptions in
      integrations. Instead of passing in the entire, which could
      have multiple lines and contextual information, we trim and
      pass only the first line, without the trailing `at line #`
      added from eg. plain `die`. This error is still set unmodified
      as the exception.
    * Injection and extraction methods for processors catch errors
      from their callbacks as required by
      https://opentelemetry.io/docs/specs/otel/error-handling/#guidance
    * Validate initial values for TraceContext::TraceFlags: they
      must be in the 0-255 range (inclusive) or they are ignored
    * The Tracer's experimental in_span interface now automatically
      sets the status of the span as long as the span's status remains
      unset at the end of the block

0.015     2023-11-09 23:42:47+00:00 Europe/London
